# rust-llama.cpp

./: Cargo.toml  README.md  bindgen.hpp  binding.cpp  binding.h  build.rs  finetune_binding.cpp  finetune_binding.hpp  train_binding.h
examples/finetune/: Cargo.toml
examples/finetune/src/: main.rs
src/: ggml.rs  lib.rs
