[package]
authors = ["mdrokz <mohammadmunshi@gmail.com>"]
name = "llama_cpp_rs"
description = "Rust bindings for LLAMA.CPP inference"
categories = [
    "api-bindings",
    "development-tools::ffi",
    "development-tools::build-utils",
    "science",
]
keywords = [
    "machine-learning",
    "api-bindings",
    "llama",
    "llama-cpp",
    "inference",
]
exclude = ["/examples", "/example_test"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mdrokz/rust-llama.cpp"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[build-dependencies]
cc = {version = "1.0.79", features = ["parallel"]}
bindgen = "0.66.1"
syn = "2.0.40"
quote = "1.0.33"
proc-macro2 = "1.0.70"

#TODO: this may need another lib once/if we extract finetune and trainning
[lib]
name = "llama_cpp_rs"
path = "src/lib.rs"

[features]
opencl = []
cuda = []
metal = []
openblas = []
blis = []
