[package]
authors = ["Corallus-Caninus <ward.joshua92@yahoo.com>"]
name = "llama_finetune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama_cpp_rs = {path = "../../"}
syn = "2.0.40"
#llama_cpp_rs = { path = "../../", features = ["cuda"] }
#TODO: train? etc?